--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -254,7 +254,7 @@ h2 {
 }
 
 .search {
-    margin-top: 33px;
+    padding-top: 20px;
 }
 
 .search:hover {
@@ -286,6 +286,7 @@ h2 {
 
 .nav5:hover{
     cursor: pointer;
+    background-color: white;
 }
 
 .magikarp {
@@ -490,6 +491,7 @@ h2 {
 }
 
 .metapod .logo {
+    cursor: pointer;
     padding: 20px 5px;
 }
 
@@ -502,6 +504,19 @@ h2 {
     background-color: rgb(74, 187, 74);
     color: white;
     height: 100px;
+}
+
+.pod {
+    font-size: 100px;
+    padding-left: 100px;
+}
+
+.pod:hover {
+    cursor: pointer;
+    font-size: 100px;
+    padding-left: 100px;
+    color: white;
+    transition: color 0.5;
 }
 
 .nav9 {
@@ -545,16 +560,30 @@ h2 {
     color: rgb(255, 255, 255);
     font-family: sans-serif;
     font-size: 50px;
-    padding-left: 10em;
-    line-height: 100px;}
+    padding: 20px;
+    line-height: 100px;
+    border: 5px solid transparent;
+    border-radius: 5px;
+    transition: border 0.5s;
+    text-decoration: none;
+}
+
+.poli:hover {
+    border: 5px solid rgb(255, 255, 255);
+}
 
 .poliwhirl .logo {
     padding-top: 20px;
     padding-left: 400px;
 }
 
+.nav10 {
+    border: 5px solid transparent;
+    transition: border 0.5s;
+    text-decoration: none;
+}
+
 .nav10:hover{
     cursor: pointer;
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+    border: 5px solid rgb(15, 88, 148);
 }
